--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -111,6 +111,7 @@
     <string name="alarm_snoozed_until">La alarma se pospuso hasta:</string>
     <string name="upcoming_alarm_indication_notification_title">Alarma próxima</string>
     <string name="upcoming_alarm_indication_notification_text">Se ha establecido la alarma para %1$s</string>
+    <string name="upcoming_snoozed_alarm_indication_notification_text">La alarma se ha pospuesto hasta las %1$s</string>
     <string name="next_step">Próximo paso</string>
     <string name="alarm_in_less_than_1_hour_to_edit_scan_code">Alarma en menos de 1 hora: para editar, desactive la alarma escaneando el código.</string>
     <string name="alarm_in_less_than_1_hour_scan_code_to_disable">Alarma en menos de 1 hora: escanee el código para desactivar la alarma.</string>
