--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -117,6 +117,7 @@
     <string name="alarm_snoozed_until">Alarm uśpiony do:</string>
     <string name="upcoming_alarm_indication_notification_title">Nadchodzący alarm</string>
     <string name="upcoming_alarm_indication_notification_text">Ustawiono alarm na %1$s</string>
+    <string name="upcoming_snoozed_alarm_indication_notification_text">Alarm został uśpiony do godziny %1$s</string>
     <string name="next_step">Następny krok</string>
     <string name="alarm_in_less_than_1_hour_to_edit_scan_code">Alarm za mniej niż 1 godzinę - aby edytować, wyłącz alarm, skanując kod.</string>
     <string name="alarm_in_less_than_1_hour_scan_code_to_disable">Alarm za mniej niż 1 godzinę - zeskanuj kod, aby wyłączyć alarm.</string>
