--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,7 @@
     <string name="alarm_snoozed_until">Alarm snoozed until:</string>
     <string name="upcoming_alarm_indication_notification_title">Upcoming alarm</string>
     <string name="upcoming_alarm_indication_notification_text">Alarm has been set for %1$s</string>
+    <string name="upcoming_snoozed_alarm_indication_notification_text">Alarm has been snoozed until %1$s</string>
     <string name="next_step">Next step</string>
     <string name="alarm_in_less_than_1_hour_to_edit_scan_code">Alarm in less than 1 hour - in order to edit, disable the alarm by scanning the code.</string>
     <string name="alarm_in_less_than_1_hour_scan_code_to_disable">Alarm in less than 1 hour - scan the code to disable the alarm.</string>
