--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,7 +176,7 @@
     <string name="_1_hour_lock">1 hour lock</string>
     <string name="_1_hour_lock_description">Alarm can\'t be canceled without code if it is in less than 1 hour.</string>
     <string name="power_off_guard">Power-off guard</string>
-    <string name="power_off_guard_description">Do not let yourself turn off your phone when the alarm is ringing.</string>
+    <string name="power_off_guard_description">Prevent the power-off menu from stopping your alarm.</string>
     <string name="lock_alarm_to_this_volume">Set the alarm to this volume when it rings:</string>
     <string name="using_system_alarm_volume">Using system alarm volume</string>
     <string name="ok">OK</string>
