--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -177,7 +177,7 @@
     <string name="_1_hour_lock">Bloqueo de 1 hora</string>
     <string name="_1_hour_lock_description">La alarma no se puede cancelar sin código si es queda 1 hora.</string>
     <string name="power_off_guard">Protección contra apagado</string>
-    <string name="power_off_guard_description">No te permitas apagar el teléfono cuando suene la alarma.</string>
+    <string name="power_off_guard_description">Evita que el menú de apagado detenga tu alarma.</string>
     <string name="lock_alarm_to_this_volume">Ajuste la alarma a este volumen cuando suene:</string>
     <string name="using_system_alarm_volume">Uso del volumen de alarma del sistema</string>
     <string name="ok">OK</string>
