--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -177,7 +177,7 @@
     <string name="_1_hour_lock">Blocco di 1 ora</string>
     <string name="_1_hour_lock_description">L\'allarme non può essere annullato senza codice se si verifica in meno di un\'ora.</string>
     <string name="power_off_guard">Protezione spegnimento</string>
-    <string name="power_off_guard_description">Non lasciatevi spegnere il telefono quando suona la sveglia.</string>
+    <string name="power_off_guard_description">Impedisci al menu di spegnimento di disattivare la sveglia.</string>
     <string name="lock_alarm_to_this_volume">Impostare la sveglia su questo volume quando suona:</string>
     <string name="using_system_alarm_volume">Utilizzo del volume degli allarmi di sistema</string>
     <string name="ok">OK</string>
