--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -183,7 +183,7 @@
     <string name="_1_hour_lock">Blokada 1 godziny</string>
     <string name="_1_hour_lock_description">Alarm nie może być anulowany bez kodu, jeśli jest za mniej niż 1 godzinę.</string>
     <string name="power_off_guard">Ochrona wyłączania</string>
-    <string name="power_off_guard_description">Nie pozwól sobie na wyłączenie telefonu, gdy dzwoni alarm.</string>
+    <string name="power_off_guard_description">Zapobiegaj wyłączeniu alarmu przez menu wyłączania zasilania.</string>
     <string name="lock_alarm_to_this_volume">Ustaw głośność alarmu, gdy dzwoni:</string>
     <string name="using_system_alarm_volume">Korzystanie z głośności alarmu systemowego</string>
     <string name="ok">OK</string>
