--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,30 +1,32 @@
 <resources>
     <plurals name="number_of_snoozes_plural">
         <item quantity="one">%1$d soneca</item>
-        <item quantity="other">%1$d sonecas</item>
+        <item quantity="many">%1$d sonecas</item>
     </plurals>
 
     <plurals name="snooze_duration_plural">
-        <item quantity="other">%1$d minutos</item>
+        <item quantity="one">%1$d minuto</item>
+        <item quantity="many">%1$d minutos</item>
     </plurals>
 
     <plurals name="number_of_seconds_plural">
-        <item quantity="other">%1$d segundos</item>
+        <item quantity="one">%1$d segundo</item>
+        <item quantity="many">%1$d segundos</item>
     </plurals>
 
     <plurals name="days">
         <item quantity="one">%1$d dia</item>
-        <item quantity="other">%1$d dias</item>
+        <item quantity="many">%1$d dias</item>
     </plurals>
 
     <plurals name="hours">
         <item quantity="one">%1$d hora</item>
-        <item quantity="other">%1$d horas</item>
+        <item quantity="many">%1$d horas</item>
     </plurals>
 
     <plurals name="minutes">
         <item quantity="one">%1$d minuto</item>
-        <item quantity="other">%1$d minutos</item>
+        <item quantity="many">%1$d minutos</item>
     </plurals>
 
     <string name="app_name" translatable="false">QRAlarm</string>
