--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -203,4 +203,5 @@
     <string name="slider_range">Schieberegler-Bereich:</string>
     <string name="required_matches">Erforderliche Übereinstimmungen:</string>
     <string name="preview_emergency_task">Vorschau der Notfallaufgabe</string>
+    <string name="alarms_chain">Alarmketten</string>
 </resources>
