--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -209,4 +209,5 @@
     <string name="slider_range">Plage du curseur :</string>
     <string name="required_matches">Correspondances requises :</string>
     <string name="preview_emergency_task">Prévisualisation de la tâche d\'urgence</string>
+    <string name="alarms_chain">Chaîne d\'alarmes</string>
 </resources>
