--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -223,4 +223,7 @@
     <string name="required_matches">Необхідні збіги:</string>
     <string name="preview_emergency_task">Попередній перегляд аварійного завдання</string>
     <string name="alarms_chain">Ланцюг сигналізації</string>
+    <string name="alarms_chain_description">З\'єднайте сигнали тривоги, щоб залишатися бадьорими та активними — вимкніть кожен з них, скануючи коди в різних місцях.</string>
+    <string name="this_alarm">Ця сигналізація</string>
+    <string name="add_next_alarm_in_chain">+ Додати наступний будильник у ланцюжку</string>
 </resources>
