Handling camera initialization errors on CustomCodeScannerScreen

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -212,4 +212,5 @@
     <string name="alarms_chain_description">Verknüpfen Sie Alarme miteinander, um wach und aktiv zu bleiben – deaktivieren Sie jeden einzelnen, indem Sie Codes an verschiedenen Orten scannen.</string>
     <string name="this_alarm">Dieser Alarm</string>
     <string name="add_next_alarm_in_chain">+ Nächsten Alarm in der Kette hinzufügen</string>
+    <string name="failed_to_initialize_camera">Die Kamera konnte nicht initialisiert werden</string>
 </resources>
