--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -225,4 +225,5 @@
     <string name="alarms_chain_description">Conecte os alarmes para permanecer acordado e ativo - desative cada um deles digitalizando os códigos em locais diferentes.</string>
     <string name="this_alarm">Este alarme</string>
     <string name="add_next_alarm_in_chain">+ Adicionar próximo alarme na cadeia</string>
+    <string name="failed_to_initialize_camera">Falha ao inicializar a câmara</string>
 </resources>
