--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -212,4 +212,5 @@
     <string name="alarms_chain_description">Alarmları birbirine bağlayarak uyanık ve aktif kalın - farklı yerlerdeki kodları tarayarak her birini devre dışı bırakın.</string>
     <string name="this_alarm">Bu alarm</string>
     <string name="add_next_alarm_in_chain">+ Zincirde bir sonraki alarmı ekle</string>
+    <string name="failed_to_initialize_camera">Kamerayı başlatılamadı</string>
 </resources>
