--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -226,4 +226,5 @@
     <string name="alarms_chain_description">З\'єднайте сигнали тривоги, щоб залишатися бадьорими та активними — вимкніть кожен з них, скануючи коди в різних місцях.</string>
     <string name="this_alarm">Ця сигналізація</string>
     <string name="add_next_alarm_in_chain">+ Додати наступний будильник у ланцюжку</string>
+    <string name="failed_to_initialize_camera">Не вдалося ініціалізувати камеру</string>
 </resources>
