--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -217,4 +217,5 @@
     <string name="alarms_chain_description">Link alarms together to stay awake and active - disable each one by scanning codes in different places.</string>
     <string name="this_alarm">This alarm</string>
     <string name="add_next_alarm_in_chain">+ Add next alarm in chain</string>
+    <string name="failed_to_initialize_camera">Failed to initialize camera</string>
 </resources>
